--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>dnd_initiative_v1_4</title>
+  <title>DND Initiative</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '3314576225';
+    var serviceWorkerVersion = '2760423132';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
